--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </table>
 
     <p><h1>This is a LI0N🦁🦁</h1></p>
-    <img src="Part B files/leopard.jpg" alt="leopard Image">
+    <img src="3179/leopard.jpg" alt="leopard Image">
 
 </body>
 </html>
